load(
    "@nodejs//nodejs/private:lief_sources.bzl",
    "LIEF_SOURCES",
    "LIEF_THIRD_PARTY_SOURCES",
)
load(
    "@nodejs//nodejs/private:openssl_sources.bzl",
    "OPENSSL_NO_ASM_PLATFORM_DEFINES",
    "OPENSSL_NO_ASM_PLATFORM_SOURCES",
    "OPENSSL_NO_ASM_SOURCES",
)
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "target_linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "target_macos",
    constraint_values = ["@platforms//os:macos"],
)

config_setting(
    name = "target_x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "target_arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "target_linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "target_linux_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "target_macos_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "target_macos_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

exports_files([
    "bazel/release.bzl",
    "bazel/release_config.gypi",
    "bazel/release_metadata.json",
    "common.gypi",
    "configure.py",
    "deps/openssl/config/archs/darwin64-arm64-cc/no-asm/openssl.gypi",
    "deps/openssl/config/archs/darwin64-x86_64-cc/no-asm/openssl.gypi",
    "deps/openssl/config/archs/linux-aarch64/no-asm/openssl.gypi",
    "deps/openssl/config/archs/linux-x86_64/no-asm/openssl.gypi",
    "deps/LIEF/lief.gyp",
    "node.gyp",
    "src/node_version.h",
])

filegroup(
    name = "release_metadata",
    srcs = ["bazel/release_metadata.json"],
)

filegroup(
    name = "configure_audit_sources",
    srcs = [
        "common.gypi",
        "configure.py",
        "node.gyp",
    ] + glob([
        "tools/v8_gypfiles/*.gyp",
        "tools/v8_gypfiles/*.gypi",
    ]),
)

_LIBUV_COMMON_SOURCES = [
    "deps/uv/src/fs-poll.c",
    "deps/uv/src/idna.c",
    "deps/uv/src/inet.c",
    "deps/uv/src/random.c",
    "deps/uv/src/strscpy.c",
    "deps/uv/src/strtok.c",
    "deps/uv/src/thread-common.c",
    "deps/uv/src/threadpool.c",
    "deps/uv/src/timer.c",
    "deps/uv/src/uv-common.c",
    "deps/uv/src/uv-data-getter-setters.c",
    "deps/uv/src/version.c",
]

_LIBUV_UNIX_SOURCES = [
    "deps/uv/src/unix/async.c",
    "deps/uv/src/unix/core.c",
    "deps/uv/src/unix/dl.c",
    "deps/uv/src/unix/fs.c",
    "deps/uv/src/unix/getaddrinfo.c",
    "deps/uv/src/unix/getnameinfo.c",
    "deps/uv/src/unix/loop-watcher.c",
    "deps/uv/src/unix/loop.c",
    "deps/uv/src/unix/pipe.c",
    "deps/uv/src/unix/poll.c",
    "deps/uv/src/unix/process.c",
    "deps/uv/src/unix/random-devurandom.c",
    "deps/uv/src/unix/signal.c",
    "deps/uv/src/unix/stream.c",
    "deps/uv/src/unix/tcp.c",
    "deps/uv/src/unix/thread.c",
    "deps/uv/src/unix/tty.c",
    "deps/uv/src/unix/udp.c",
]

cc_library(
    name = "libuv",
    srcs = _LIBUV_COMMON_SOURCES + _LIBUV_UNIX_SOURCES + select(
        {
            ":target_linux": [
                "deps/uv/src/unix/linux.c",
                "deps/uv/src/unix/procfs-exepath.c",
                "deps/uv/src/unix/proctitle.c",
                "deps/uv/src/unix/random-getrandom.c",
                "deps/uv/src/unix/random-sysctl-linux.c",
            ],
            ":target_macos": [
                "deps/uv/src/unix/bsd-ifaddrs.c",
                "deps/uv/src/unix/darwin-proctitle.c",
                "deps/uv/src/unix/darwin.c",
                "deps/uv/src/unix/fsevents.c",
                "deps/uv/src/unix/kqueue.c",
                "deps/uv/src/unix/proctitle.c",
                "deps/uv/src/unix/random-getentropy.c",
            ],
        },
        no_match_error = "libuv currently supports Linux and macOS targets",
    ),
    hdrs = glob([
        "deps/uv/include/**/*.h",
        "deps/uv/src/**/*.h",
    ]),
    copts = [
        "-fno-strict-aliasing",
        "-Wno-unused-parameter",
    ],
    defines = [
        "_FILE_OFFSET_BITS=64",
        "_LARGEFILE_SOURCE",
    ] + select(
        {
            ":target_linux": [
                "_GNU_SOURCE",
                "_POSIX_C_SOURCE=200112",
            ],
            ":target_macos": [
                "_DARWIN_UNLIMITED_SELECT=1",
                "_DARWIN_USE_64_BIT_INODE=1",
            ],
        },
        no_match_error = "libuv currently supports Linux and macOS targets",
    ),
    includes = [
        "deps/uv/include",
        "deps/uv/src",
    ],
    linkopts = select(
        {
            ":target_linux": [
                "-ldl",
                "-lm",
                "-lpthread",
                "-lrt",
            ],
            ":target_macos": [
                "-lm",
                "-lpthread",
            ],
        },
        no_match_error = "libuv currently supports Linux and macOS targets",
    ),
)

cc_binary(
    name = "node_js2c",
    srcs = [
        "src/builtin_info.cc",
        "src/builtin_info.h",
        "src/embedded_data.cc",
        "src/embedded_data.h",
        "tools/executable_wrapper.h",
        "tools/js2c.cc",
    ],
    copts = ["-std=c++20"],
    defines = ["NODE_JS2C_USE_STRING_LITERALS"],
    includes = [
        "src",
        "tools",
    ],
    linkopts = select(
        {
            ":target_linux": [],
            ":target_macos": [
                "-framework CoreFoundation",
                "-framework Security",
            ],
        },
        no_match_error = "node_js2c currently supports Linux and macOS targets",
    ),
    deps = [
        ":libuv",
        "@v8//:simdutf",
    ],
)

cc_library(
    name = "zlib_headers",
    hdrs = glob([
        "deps/zlib/*.h",
        "deps/zlib/contrib/optimizations/*.h",
    ]),
    includes = ["deps/zlib"],
)

cc_library(
    name = "zlib_adler32_simd",
    srcs = ["deps/zlib/adler32_simd.c"],
    copts = select(
        {
            ":target_x86_64": ["-mssse3"],
            ":target_arm64": [],
        },
        no_match_error = "zlib_adler32_simd currently supports x86_64 and arm64 targets",
    ),
    defines = select(
        {
            ":target_x86_64": [
                "ADLER32_SIMD_SSSE3",
                "X86_NOT_WINDOWS",
            ],
            ":target_arm64": ["ADLER32_SIMD_NEON"],
        },
        no_match_error = "zlib_adler32_simd currently supports x86_64 and arm64 targets",
    ),
    deps = [":zlib_headers"],
)

cc_library(
    name = "zlib_data_chunk_simd",
    srcs = [
        "deps/zlib/contrib/optimizations/inffast_chunk.c",
        "deps/zlib/contrib/optimizations/inflate.c",
    ],
    defines = select(
        {
            ":target_x86_64": [
                "DEFLATE_CHUNK_WRITE_64LE",
                "INFLATE_CHUNK_READ_64LE",
                "INFLATE_CHUNK_SIMD_SSE2",
            ],
            ":target_arm64": [
                "DEFLATE_CHUNK_WRITE_64LE",
                "INFLATE_CHUNK_READ_64LE",
                "INFLATE_CHUNK_SIMD_NEON",
            ],
        },
        no_match_error = "zlib_data_chunk_simd currently supports x86_64 and arm64 targets",
    ),
    deps = [":zlib_headers"],
)

cc_library(
    name = "zlib_arm_crc32",
    srcs = ["deps/zlib/crc32_simd.c"],
    defines = ["CRC32_ARMV8_CRC32"] + select(
        {
            ":target_linux": ["ARMV8_OS_LINUX"],
            ":target_macos": ["ARMV8_OS_MACOS"],
        },
        no_match_error = "zlib_arm_crc32 currently supports Linux and macOS targets",
    ),
    target_compatible_with = ["@platforms//cpu:aarch64"],
    deps = [":zlib_headers"],
)

cc_library(
    name = "zlib",
    srcs = [
        "deps/zlib/adler32.c",
        "deps/zlib/compress.c",
        "deps/zlib/cpu_features.c",
        "deps/zlib/crc32.c",
        "deps/zlib/deflate.c",
        "deps/zlib/gzclose.c",
        "deps/zlib/gzlib.c",
        "deps/zlib/gzread.c",
        "deps/zlib/gzwrite.c",
        "deps/zlib/infback.c",
        "deps/zlib/inffast.c",
        "deps/zlib/inftrees.c",
        "deps/zlib/trees.c",
        "deps/zlib/uncompr.c",
        "deps/zlib/zutil.c",
    ],
    copts = ["-Wno-implicit-fallthrough"],
    defines = ["HAVE_HIDDEN"] + select(
        {
            ":target_x86_64": [
                "DEFLATE_SLIDE_HASH_SSE2",
                "INFLATE_CHUNK_READ_64LE",
            ],
            ":target_arm64": [
                "DEFLATE_SLIDE_HASH_NEON",
                "INFLATE_CHUNK_READ_64LE",
                "__ARM_NEON__",
            ],
        },
        no_match_error = "zlib currently supports x86_64 and arm64 targets",
    ) + select(
        {
            ":target_linux": [],
            ":target_macos": ["USE_FILE32API"],
        },
        no_match_error = "zlib currently supports Linux and macOS targets",
    ),
    includes = ["deps/zlib"],
    deps = [
        ":zlib_adler32_simd",
        ":zlib_data_chunk_simd",
        ":zlib_headers",
    ] + select(
        {
            ":target_x86_64": [],
            ":target_arm64": [":zlib_arm_crc32"],
        },
        no_match_error = "zlib currently supports x86_64 and arm64 targets",
    ),
)

cc_library(
    name = "llhttp",
    srcs = [
        "deps/llhttp/src/api.c",
        "deps/llhttp/src/http.c",
        "deps/llhttp/src/llhttp.c",
    ],
    hdrs = ["deps/llhttp/include/llhttp.h"],
    includes = ["deps/llhttp/include"],
)

cc_library(
    name = "cares",
    srcs = glob(["deps/cares/src/lib/**/*.c"]),
    hdrs = glob([
        "deps/cares/config/darwin/*.h",
        "deps/cares/config/linux/*.h",
        "deps/cares/include/*.h",
        "deps/cares/src/lib/**/*.h",
    ]),
    copts = [
        "-pedantic",
        "-std=gnu11",
        "-Wall",
        "-Wextra",
        "-Wno-error=deprecated-declarations",
        "-Wno-unused-parameter",
    ],
    defines = [
        "CARES_STATICLIB",
        "HAVE_CONFIG_H",
        "_DARWIN_USE_64_BIT_INODE=1",
        "_FILE_OFFSET_BITS=64",
        "_GNU_SOURCE",
        "_LARGEFILE_SOURCE",
    ],
    includes = [
        "deps/cares/include",
        "deps/cares/src/lib",
        "deps/cares/src/lib/include",
    ] + select(
        {
            ":target_linux": ["deps/cares/config/linux"],
            ":target_macos": ["deps/cares/config/darwin"],
        },
        no_match_error = "cares currently supports Linux and macOS targets",
    ),
)

cc_library(
    name = "histogram",
    srcs = ["deps/histogram/src/hdr_histogram.c"],
    hdrs = glob([
        "deps/histogram/include/**/*.h",
        "deps/histogram/src/*.h",
    ]),
    copts = ["-fvisibility=hidden"],
    includes = [
        "deps/histogram/include",
        "deps/histogram/src",
    ],
)

cc_library(
    name = "nbytes",
    srcs = ["deps/nbytes/src/nbytes.cpp"],
    hdrs = ["deps/nbytes/include/nbytes.h"],
    copts = ["-std=c++20"],
    includes = ["deps/nbytes/include"],
)

cc_library(
    name = "brotli",
    srcs = [
        "deps/brotli/c/common/constants.c",
        "deps/brotli/c/common/context.c",
        "deps/brotli/c/common/dictionary.c",
        "deps/brotli/c/common/platform.c",
        "deps/brotli/c/common/shared_dictionary.c",
        "deps/brotli/c/common/transform.c",
        "deps/brotli/c/dec/bit_reader.c",
        "deps/brotli/c/dec/decode.c",
        "deps/brotli/c/dec/huffman.c",
        "deps/brotli/c/dec/prefix.c",
        "deps/brotli/c/dec/state.c",
        "deps/brotli/c/dec/static_init.c",
        "deps/brotli/c/enc/backward_references.c",
        "deps/brotli/c/enc/backward_references_hq.c",
        "deps/brotli/c/enc/bit_cost.c",
        "deps/brotli/c/enc/block_splitter.c",
        "deps/brotli/c/enc/brotli_bit_stream.c",
        "deps/brotli/c/enc/cluster.c",
        "deps/brotli/c/enc/command.c",
        "deps/brotli/c/enc/compound_dictionary.c",
        "deps/brotli/c/enc/compress_fragment.c",
        "deps/brotli/c/enc/compress_fragment_two_pass.c",
        "deps/brotli/c/enc/dictionary_hash.c",
        "deps/brotli/c/enc/encode.c",
        "deps/brotli/c/enc/encoder_dict.c",
        "deps/brotli/c/enc/entropy_encode.c",
        "deps/brotli/c/enc/fast_log.c",
        "deps/brotli/c/enc/histogram.c",
        "deps/brotli/c/enc/literal_cost.c",
        "deps/brotli/c/enc/memory.c",
        "deps/brotli/c/enc/metablock.c",
        "deps/brotli/c/enc/static_dict.c",
        "deps/brotli/c/enc/static_dict_lut.c",
        "deps/brotli/c/enc/static_init.c",
        "deps/brotli/c/enc/utf8_util.c",
    ],
    hdrs = glob(["deps/brotli/c/**/*.h"]),
    defines = select(
        {
            ":target_linux": ["OS_LINUX"],
            ":target_macos": ["OS_MACOSX"],
        },
        no_match_error = "brotli currently supports Linux and macOS targets",
    ),
    includes = ["deps/brotli/c/include"],
    linkopts = select(
        {
            ":target_linux": ["-lm"],
            ":target_macos": [],
        },
        no_match_error = "brotli currently supports Linux and macOS targets",
    ),
)

cc_library(
    name = "nghttp2",
    srcs = [
        "deps/nghttp2/lib/nghttp2_alpn.c",
        "deps/nghttp2/lib/nghttp2_buf.c",
        "deps/nghttp2/lib/nghttp2_callbacks.c",
        "deps/nghttp2/lib/nghttp2_debug.c",
        "deps/nghttp2/lib/nghttp2_extpri.c",
        "deps/nghttp2/lib/nghttp2_frame.c",
        "deps/nghttp2/lib/nghttp2_hd.c",
        "deps/nghttp2/lib/nghttp2_hd_huffman.c",
        "deps/nghttp2/lib/nghttp2_hd_huffman_data.c",
        "deps/nghttp2/lib/nghttp2_helper.c",
        "deps/nghttp2/lib/nghttp2_http.c",
        "deps/nghttp2/lib/nghttp2_map.c",
        "deps/nghttp2/lib/nghttp2_mem.c",
        "deps/nghttp2/lib/nghttp2_option.c",
        "deps/nghttp2/lib/nghttp2_outbound_item.c",
        "deps/nghttp2/lib/nghttp2_pq.c",
        "deps/nghttp2/lib/nghttp2_priority_spec.c",
        "deps/nghttp2/lib/nghttp2_queue.c",
        "deps/nghttp2/lib/nghttp2_ratelim.c",
        "deps/nghttp2/lib/nghttp2_rcbuf.c",
        "deps/nghttp2/lib/nghttp2_session.c",
        "deps/nghttp2/lib/nghttp2_stream.c",
        "deps/nghttp2/lib/nghttp2_submit.c",
        "deps/nghttp2/lib/nghttp2_time.c",
        "deps/nghttp2/lib/nghttp2_version.c",
        "deps/nghttp2/lib/sfparse.c",
    ],
    hdrs = glob([
        "deps/nghttp2/lib/*.h",
        "deps/nghttp2/lib/includes/**/*.h",
    ]),
    defines = [
        "BUILDING_NGHTTP2",
        "HAVE_CONFIG_H",
        "NGHTTP2_STATICLIB",
        "_U_=",
    ],
    includes = ["deps/nghttp2/lib/includes"],
)

cc_library(
    name = "zstd",
    srcs = [
        "deps/zstd/lib/common/debug.c",
        "deps/zstd/lib/common/entropy_common.c",
        "deps/zstd/lib/common/error_private.c",
        "deps/zstd/lib/common/fse_decompress.c",
        "deps/zstd/lib/common/pool.c",
        "deps/zstd/lib/common/threading.c",
        "deps/zstd/lib/common/xxhash.c",
        "deps/zstd/lib/common/zstd_common.c",
        "deps/zstd/lib/compress/fse_compress.c",
        "deps/zstd/lib/compress/hist.c",
        "deps/zstd/lib/compress/huf_compress.c",
        "deps/zstd/lib/compress/zstd_compress.c",
        "deps/zstd/lib/compress/zstd_compress_literals.c",
        "deps/zstd/lib/compress/zstd_compress_sequences.c",
        "deps/zstd/lib/compress/zstd_compress_superblock.c",
        "deps/zstd/lib/compress/zstd_double_fast.c",
        "deps/zstd/lib/compress/zstd_fast.c",
        "deps/zstd/lib/compress/zstd_lazy.c",
        "deps/zstd/lib/compress/zstd_ldm.c",
        "deps/zstd/lib/compress/zstd_opt.c",
        "deps/zstd/lib/compress/zstd_preSplit.c",
        "deps/zstd/lib/compress/zstdmt_compress.c",
        "deps/zstd/lib/decompress/huf_decompress.c",
        "deps/zstd/lib/decompress/zstd_ddict.c",
        "deps/zstd/lib/decompress/zstd_decompress.c",
        "deps/zstd/lib/decompress/zstd_decompress_block.c",
    ],
    hdrs = glob(["deps/zstd/lib/**/*.h"]),
    defines = [
        "XXH_NAMESPACE=ZSTD_",
        "ZSTD_DISABLE_ASM",
        "ZSTD_MULTITHREAD",
    ],
    includes = ["deps/zstd/lib"],
    linkopts = select(
        {
            ":target_linux": ["-pthread"],
            ":target_macos": [],
        },
        no_match_error = "zstd currently supports Linux and macOS targets",
    ),
)

cc_library(
    name = "uvwasi",
    srcs = [
        "deps/uvwasi/src/clocks.c",
        "deps/uvwasi/src/fd_table.c",
        "deps/uvwasi/src/path_resolver.c",
        "deps/uvwasi/src/poll_oneoff.c",
        "deps/uvwasi/src/sync_helpers.c",
        "deps/uvwasi/src/uv_mapping.c",
        "deps/uvwasi/src/uvwasi.c",
        "deps/uvwasi/src/wasi_rights.c",
        "deps/uvwasi/src/wasi_serdes.c",
    ],
    hdrs = glob([
        "deps/uvwasi/include/*.h",
        "deps/uvwasi/src/*.h",
    ]),
    copts = ["-fvisibility=hidden"],
    defines = select(
        {
            ":target_linux": [
                "_GNU_SOURCE",
                "_POSIX_C_SOURCE=200112",
            ],
            ":target_macos": [],
        },
        no_match_error = "uvwasi currently supports Linux and macOS targets",
    ),
    includes = ["deps/uvwasi/include"],
    deps = [":libuv"],
)

cc_library(
    name = "sqlite",
    srcs = ["deps/sqlite/sqlite3.c"],
    hdrs = [
        "deps/sqlite/sqlite3.h",
        "deps/sqlite/sqlite3ext.h",
    ],
    copts = ["-fvisibility=hidden"],
    defines = [
        "SQLITE_DEFAULT_MEMSTATUS=0",
        "SQLITE_ENABLE_COLUMN_METADATA",
        "SQLITE_ENABLE_DBSTAT_VTAB",
        "SQLITE_ENABLE_FTS3",
        "SQLITE_ENABLE_FTS3_PARENTHESIS",
        "SQLITE_ENABLE_FTS5",
        "SQLITE_ENABLE_GEOPOLY",
        "SQLITE_ENABLE_MATH_FUNCTIONS",
        "SQLITE_ENABLE_PERCENTILE",
        "SQLITE_ENABLE_PREUPDATE_HOOK",
        "SQLITE_ENABLE_RBU",
        "SQLITE_ENABLE_RTREE",
        "SQLITE_ENABLE_SESSION",
    ],
    includes = ["deps/sqlite"],
    linkopts = select(
        {
            ":target_linux": [
                "-ldl",
                "-lm",
                "-lpthread",
            ],
            ":target_macos": [],
        },
        no_match_error = "sqlite currently supports Linux and macOS targets",
    ),
)

cc_library(
    name = "ada",
    srcs = ["deps/ada/ada.cpp"],
    hdrs = [
        "deps/ada/ada.h",
        "deps/ada/ada_c.h",
    ],
    copts = ["-std=c++20"],
    defines = ["ADA_USE_SIMDUTF=1"],
    includes = ["deps/ada"],
    deps = ["@v8//:simdutf"],
)

cc_library(
    name = "merve",
    srcs = ["deps/merve/merve.cpp"],
    hdrs = [
        "deps/merve/merve.h",
        "deps/merve/merve_c.h",
    ],
    copts = ["-std=c++20"],
    defines = ["MERVE_USE_SIMDUTF=1"],
    includes = ["deps/merve"],
    deps = ["@v8//:simdutf"],
)

cc_library(
    name = "simdjson",
    srcs = ["deps/simdjson/simdjson.cpp"],
    hdrs = ["deps/simdjson/simdjson.h"],
    copts = ["-std=c++20"],
    includes = ["deps/simdjson"],
)

cc_library(
    name = "openssl",
    srcs = OPENSSL_NO_ASM_SOURCES + select(
        {
            ":target_linux_arm64": OPENSSL_NO_ASM_PLATFORM_SOURCES["linux_arm64"],
            ":target_linux_x86_64": OPENSSL_NO_ASM_PLATFORM_SOURCES["linux_x86_64"],
            ":target_macos_arm64": OPENSSL_NO_ASM_PLATFORM_SOURCES["macos_arm64"],
            ":target_macos_x86_64": OPENSSL_NO_ASM_PLATFORM_SOURCES["macos_x86_64"],
        },
        no_match_error = "openssl currently supports Linux and macOS x86_64 and arm64 targets",
    ),
    hdrs = glob([
        "deps/openssl/config/**/*.h",
        "deps/openssl/openssl/**/*.h",
        "deps/openssl/openssl/**/*.inc",
    ]),
    textual_hdrs = [
        "deps/openssl/openssl/crypto/LPdir_nyi.c",
        "deps/openssl/openssl/crypto/LPdir_unix.c",
        "deps/openssl/openssl/crypto/LPdir_vms.c",
        "deps/openssl/openssl/crypto/LPdir_win.c",
        "deps/openssl/openssl/crypto/LPdir_win32.c",
        "deps/openssl/openssl/crypto/LPdir_wince.c",
        "deps/openssl/openssl/crypto/des/ncbc_enc.c",
        "deps/openssl/openssl/providers/implementations/macs/blake2_mac_impl.c",
    ],
    copts = ["-Wno-missing-field-initializers"] + select(
        {
            ":target_linux": ["-pthread"],
            ":target_macos": [],
        },
        no_match_error = "openssl currently supports Linux and macOS targets",
    ),
    defines = [
        "MODULESDIR=\\\"/dev/null\\\"",
        "OPENSSL_API_COMPAT=0x10100001L",
        "OPENSSL_NO_ASM",
        "OPENSSL_NO_HW",
        "STATIC_LEGACY",
    ] + select(
        {
            ":target_linux_arm64": OPENSSL_NO_ASM_PLATFORM_DEFINES["linux_arm64"],
            ":target_linux_x86_64": OPENSSL_NO_ASM_PLATFORM_DEFINES["linux_x86_64"],
            ":target_macos_arm64": OPENSSL_NO_ASM_PLATFORM_DEFINES["macos_arm64"],
            ":target_macos_x86_64": OPENSSL_NO_ASM_PLATFORM_DEFINES["macos_x86_64"],
        },
        no_match_error = "openssl currently supports Linux and macOS x86_64 and arm64 targets",
    ) + select(
        {
            ":target_linux": [
                "ENGINESDIR=\\\"/dev/null\\\"",
                "OPENSSLDIR=\\\"/etc/ssl\\\"",
                "TERMIOS",
            ],
            ":target_macos": [
                "ENGINESDIR=\\\"/dev/null\\\"",
                "OPENSSLDIR=\\\"/System/Library/OpenSSL/\\\"",
            ],
        },
        no_match_error = "openssl currently supports Linux and macOS targets",
    ),
    includes = [
        "deps/openssl/config",
        "deps/openssl/openssl",
        "deps/openssl/openssl/crypto",
        "deps/openssl/openssl/crypto/ec/curve448",
        "deps/openssl/openssl/crypto/ec/curve448/arch_32",
        "deps/openssl/openssl/crypto/include",
        "deps/openssl/openssl/crypto/modes",
        "deps/openssl/openssl/include",
        "deps/openssl/openssl/providers/common/include",
        "deps/openssl/openssl/providers/fips/include",
        "deps/openssl/openssl/providers/implementations/include",
    ] + select(
        {
            ":target_linux_arm64": [
                "deps/openssl/config/archs/linux-aarch64/no-asm",
                "deps/openssl/config/archs/linux-aarch64/no-asm/crypto",
                "deps/openssl/config/archs/linux-aarch64/no-asm/crypto/include/internal",
                "deps/openssl/config/archs/linux-aarch64/no-asm/include",
                "deps/openssl/config/archs/linux-aarch64/no-asm/providers/common/include",
            ],
            ":target_linux_x86_64": [
                "deps/openssl/config/archs/linux-x86_64/no-asm",
                "deps/openssl/config/archs/linux-x86_64/no-asm/crypto",
                "deps/openssl/config/archs/linux-x86_64/no-asm/crypto/include/internal",
                "deps/openssl/config/archs/linux-x86_64/no-asm/include",
                "deps/openssl/config/archs/linux-x86_64/no-asm/providers/common/include",
            ],
            ":target_macos_arm64": [
                "deps/openssl/config/archs/darwin64-arm64-cc/no-asm",
                "deps/openssl/config/archs/darwin64-arm64-cc/no-asm/crypto",
                "deps/openssl/config/archs/darwin64-arm64-cc/no-asm/crypto/include/internal",
                "deps/openssl/config/archs/darwin64-arm64-cc/no-asm/include",
                "deps/openssl/config/archs/darwin64-arm64-cc/no-asm/providers/common/include",
            ],
            ":target_macos_x86_64": [
                "deps/openssl/config/archs/darwin64-x86_64-cc/no-asm",
                "deps/openssl/config/archs/darwin64-x86_64-cc/no-asm/crypto",
                "deps/openssl/config/archs/darwin64-x86_64-cc/no-asm/crypto/include/internal",
                "deps/openssl/config/archs/darwin64-x86_64-cc/no-asm/include",
                "deps/openssl/config/archs/darwin64-x86_64-cc/no-asm/providers/common/include",
            ],
        },
        no_match_error = "openssl currently supports Linux and macOS x86_64 and arm64 targets",
    ),
    linkopts = select(
        {
            ":target_linux": [
                "-ldl",
                "-pthread",
            ],
            ":target_macos": [],
        },
        no_match_error = "openssl currently supports Linux and macOS targets",
    ),
)

cc_library(
    name = "ncrypto",
    srcs = [
        "deps/ncrypto/engine.cc",
        "deps/ncrypto/ncrypto.cc",
    ],
    hdrs = ["deps/ncrypto/ncrypto.h"],
    copts = ["-std=c++20"],
    defines = ["NCRYPTO_BSSL_LIBDECREPIT_MISSING=1"],
    includes = ["deps/ncrypto"],
    deps = [":openssl"],
)

py_binary(
    name = "libffi_generate_headers",
    srcs = ["deps/libffi/generate-headers.py"],
    data = [
        "deps/libffi/include/ffi.h.in",
        "deps/libffi/src/aarch64/ffitarget.h",
        "deps/libffi/src/arm/ffitarget.h",
        "deps/libffi/src/loongarch64/ffitarget.h",
        "deps/libffi/src/mips/ffitarget.h",
        "deps/libffi/src/powerpc/ffitarget.h",
        "deps/libffi/src/riscv/ffitarget.h",
        "deps/libffi/src/x86/ffitarget.h",
    ],
    main = "deps/libffi/generate-headers.py",
)

genrule(
    name = "libffi_headers_linux_arm64",
    outs = [
        "generated/libffi/linux_arm64/ffi.h",
        "generated/libffi/linux_arm64/fficonfig.h",
        "generated/libffi/linux_arm64/ffitarget.h",
    ],
    cmd = "$(execpath :libffi_generate_headers) --output-dir $(RULEDIR)/generated/libffi/linux_arm64 --target-arch arm64 --os linux",
    tools = [":libffi_generate_headers"],
)

genrule(
    name = "libffi_headers_linux_x86_64",
    outs = [
        "generated/libffi/linux_x86_64/ffi.h",
        "generated/libffi/linux_x86_64/fficonfig.h",
        "generated/libffi/linux_x86_64/ffitarget.h",
    ],
    cmd = "$(execpath :libffi_generate_headers) --output-dir $(RULEDIR)/generated/libffi/linux_x86_64 --target-arch x64 --os linux",
    tools = [":libffi_generate_headers"],
)

genrule(
    name = "libffi_headers_macos_arm64",
    outs = [
        "generated/libffi/macos_arm64/ffi.h",
        "generated/libffi/macos_arm64/fficonfig.h",
        "generated/libffi/macos_arm64/ffitarget.h",
    ],
    cmd = "$(execpath :libffi_generate_headers) --output-dir $(RULEDIR)/generated/libffi/macos_arm64 --target-arch arm64 --os mac",
    tools = [":libffi_generate_headers"],
)

genrule(
    name = "libffi_headers_macos_x86_64",
    outs = [
        "generated/libffi/macos_x86_64/ffi.h",
        "generated/libffi/macos_x86_64/fficonfig.h",
        "generated/libffi/macos_x86_64/ffitarget.h",
    ],
    cmd = "$(execpath :libffi_generate_headers) --output-dir $(RULEDIR)/generated/libffi/macos_x86_64 --target-arch x64 --os mac",
    tools = [":libffi_generate_headers"],
)

cc_library(
    name = "libffi",
    srcs = [
        "deps/libffi/src/closures.c",
        "deps/libffi/src/debug.c",
        "deps/libffi/src/java_raw_api.c",
        "deps/libffi/src/prep_cif.c",
        "deps/libffi/src/raw_api.c",
        "deps/libffi/src/tramp.c",
        "deps/libffi/src/types.c",
    ] + select(
        {
            ":target_linux_arm64": [
                "deps/libffi/src/aarch64/ffi.c",
                "deps/libffi/src/aarch64/sysv.S",
            ],
            ":target_linux_x86_64": [
                "deps/libffi/src/x86/ffi64.c",
                "deps/libffi/src/x86/ffiw64.c",
                "deps/libffi/src/x86/unix64.S",
                "deps/libffi/src/x86/win64.S",
            ],
            ":target_macos_arm64": [
                "deps/libffi/src/aarch64/ffi.c",
                "deps/libffi/src/aarch64/sysv.S",
            ],
            ":target_macos_x86_64": [
                "deps/libffi/src/x86/ffi64.c",
                "deps/libffi/src/x86/ffiw64.c",
                "deps/libffi/src/x86/unix64.S",
                "deps/libffi/src/x86/win64.S",
            ],
        },
        no_match_error = "libffi currently supports Linux and macOS x86_64 and arm64 targets",
    ),
    hdrs = glob([
        "deps/libffi/include/*.h",
        "deps/libffi/src/**/*.h",
    ]) + select(
        {
            ":target_linux_arm64": [
                ":generated/libffi/linux_arm64/ffi.h",
                ":generated/libffi/linux_arm64/fficonfig.h",
                ":generated/libffi/linux_arm64/ffitarget.h",
            ],
            ":target_linux_x86_64": [
                ":generated/libffi/linux_x86_64/ffi.h",
                ":generated/libffi/linux_x86_64/fficonfig.h",
                ":generated/libffi/linux_x86_64/ffitarget.h",
            ],
            ":target_macos_arm64": [
                ":generated/libffi/macos_arm64/ffi.h",
                ":generated/libffi/macos_arm64/fficonfig.h",
                ":generated/libffi/macos_arm64/ffitarget.h",
            ],
            ":target_macos_x86_64": [
                ":generated/libffi/macos_x86_64/ffi.h",
                ":generated/libffi/macos_x86_64/fficonfig.h",
                ":generated/libffi/macos_x86_64/ffitarget.h",
            ],
        },
        no_match_error = "libffi currently supports Linux and macOS x86_64 and arm64 targets",
    ),
    textual_hdrs = ["deps/libffi/src/dlmalloc.c"],
    copts = ["-fvisibility=hidden"],
    includes = [
        "deps/libffi/include",
        "deps/libffi/src",
    ] + select(
        {
            ":target_linux_arm64": ["generated/libffi/linux_arm64"],
            ":target_linux_x86_64": ["generated/libffi/linux_x86_64"],
            ":target_macos_arm64": ["generated/libffi/macos_arm64"],
            ":target_macos_x86_64": ["generated/libffi/macos_x86_64"],
        },
        no_match_error = "libffi currently supports Linux and macOS x86_64 and arm64 targets",
    ),
    local_defines = ["FFI_STATIC_BUILD"],
)

cc_library(
    name = "lief_mbedtls",
    srcs = LIEF_THIRD_PARTY_SOURCES,
    hdrs = glob([
        "deps/LIEF/config/**/*.h",
        "deps/LIEF/third-party/mbedtls/include/**/*.h",
        "deps/LIEF/third-party/mbedtls/library/**/*.h",
    ]),
    copts = ["-fPIC"],
    includes = [
        "deps/LIEF",
        "deps/LIEF/third-party/mbedtls/include",
        "deps/LIEF/third-party/mbedtls/library",
    ],
    local_defines = [
        "MBEDTLS_CONFIG_FILE=\\\"config/mbedtls/config.h\\\"",
        "MBEDTLS_NO_PLATFORM_ENTROPY",
    ],
)

cc_library(
    name = "lief",
    srcs = LIEF_SOURCES,
    hdrs = glob(
        [
            "deps/LIEF/include/**/*.def",
            "deps/LIEF/include/**/*.h",
            "deps/LIEF/include/**/*.hpp",
            "deps/LIEF/include/**/*.inc",
            "deps/LIEF/include/**/*.tcc",
            "deps/LIEF/src/**/*.def",
            "deps/LIEF/src/**/*.h",
            "deps/LIEF/src/**/*.hpp",
            "deps/LIEF/src/**/*.inc",
            "deps/LIEF/src/**/*.tcc",
            "deps/LIEF/third-party/expected/include/**/*.hpp",
            "deps/LIEF/third-party/frozen/include/**/*.h",
            "deps/LIEF/third-party/spdlog/include/**/*.h",
            "deps/LIEF/third-party/spdlog/include/**/*.hpp",
        ],
        allow_empty = True,
    ),
    copts = [
        "-std=gnu++17",
        "-include",
        "cstdlib",
        "-fPIC",
        "-fvisibility=hidden",
        "-fvisibility-inlines-hidden",
        "-Wall",
        "-Wextra",
        "-Wpedantic",
        "-Wno-expansion-to-defined",
        "-Werror=return-type",
        "-fno-exceptions",
    ],
    includes = [
        "deps/LIEF",
        "deps/LIEF/include",
        "deps/LIEF/src",
        "deps/LIEF/third-party/mbedtls/include",
        "deps/LIEF/third-party/mbedtls/library",
        "deps/LIEF/third-party/spdlog/include",
        "deps/LIEF/third-party/frozen/include",
        "deps/LIEF/include/LIEF/third-party",
        "deps/LIEF/include/LIEF/third-party/internal",
    ],
    local_defines = [
        "LIEF_STATIC",
        "MBEDTLS_CONFIG_FILE=\\\"config/mbedtls/config.h\\\"",
        "MBEDTLS_NO_PLATFORM_ENTROPY",
        "NDEBUG",
        "SPDLOG_DISABLE_DEFAULT_LOGGER",
        "SPDLOG_FUNCTION=\\\"\\\"",
        "SPDLOG_NO_EXCEPTIONS",
        "_GLIBCXX_USE_CXX11_ABI=1",
    ],
    deps = [":lief_mbedtls"],
)
